--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="rules_4"> 4.举例说明您每天邀请1为好友成为您的粉丝，您的粉丝每天再邀请一人，按没人每天赚10元钱，那么</string>
     <string name="app_introduce">  积分墙作为一款连接用户和推广需求的专业平台，旨在做广告推广的同时为广大用户提供一根相当可观的兼职工作，仅需要利用平时生活中的零散时间，利用大家的人脉和自媒体的推广能力，便在为产品宣传的同时获得高额稳定的收入，零风险，零投入而带来的是高回报！</string>
     <string name="sign_introduce1">1.每天签到时间为00:01到23:59</string>
-    <string name="sign_introduce2">2.首日签到得10积分,连续第二天得20积分,第三天得30积分，最多每天可获得100积分</string>
-    <string name="sign_introduce3">3.同一IP,同一地址，同一联系人，同一台电脑只允许一个账户签到,发现多个账户签到的全部封号</string>
+    <string name="sign_introduce2">2.首日签到得0.1元,连续签到第15天得3元,连续签到30天奖励6元。</string>
+    <string name="sign_introduce3">3.连续签到中断需要重头开始签到</string>
+    <string name="sign_introduce4">4.签到奖励金额自动存入易赚账户中。</string>
     <string name="about_ours">    积分墙作为一个全民赚钱平台，利用其独有的微信提现、一秒到账技术，仅上线第一个月，累计发放奖金就已经超过了120万元，数万用户成功在积分墙赚到了第一桶金。积分墙旨在给广大用户提供一个赚的多，提现快的兼职平台，点击提现后一秒钟就会把奖金发到您的微信钱包中。
 赚800以其简单的任务形式、超低的提现门槛和极快的提现速度受到了广大用户的一致好评，短短三个月的时间内就积累了将近30万名的忠实粉丝，积分墙用它的高品质与高收益赢得了广大用户的认可。
 积分墙的任务以朋友圈分享阅读，注册试用，关注公众号，小游戏等为主，动动手指将有趣的链接分享到朋友圈或微信群，只要有人点击你就有钱赚，每次点击都有0.1元入账，好友二次分享后的阅读也给你增加收入，数量超过十次还有额外奖励，轻轻松松就能赚几十元、上百元。每天躺着玩一会儿积分墙，你就会得到丰厚的零花钱！这将是一个千万用户共同打造的全民high玩赚钱平台。
