--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="rules_4"> 4.举例说明您每天邀请1为好友成为您的粉丝，您的粉丝每天再邀请一人，按没人每天赚10元钱，那么</string>
     <string name="app_introduce">  积分墙作为一款连接用户和推广需求的专业平台，旨在做广告推广的同时为广大用户提供一根相当可观的兼职工作，仅需要利用平时生活中的零散时间，利用大家的人脉和自媒体的推广能力，便在为产品宣传的同时获得高额稳定的收入，零风险，零投入而带来的是高回报！</string>
     <string name="sign_introduce1">1.每天签到时间为00:01到23:59</string>
-    <string name="sign_introduce2">2.首日签到得0.1元,连续签到第15天得3元,连续签到30天奖励6元。</string>
+    <string name="sign_introduce2">2.每日签到得0.1元,连续签到第15天得3元,连续签到30天奖励6元。</string>
     <string name="sign_introduce3">3.连续签到中断需要重头开始签到</string>
     <string name="sign_introduce4">4.签到奖励金额自动存入易钻账户中。</string>
     <string name="about_ours">    积分墙作为一个全民赚钱平台，利用其独有的微信提现、一秒到账技术，仅上线第一个月，累计发放奖金就已经超过了120万元，数万用户成功在积分墙赚到了第一桶金。积分墙旨在给广大用户提供一个赚的多，提现快的兼职平台，点击提现后一秒钟就会把奖金发到您的微信钱包中。
